# commit-hook

./: .commit-hook.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/commit_hook/: __init__.py  __main__.py  cli.py  config.py  diff.py  llm.py  reporter.py  rules.py
tests/: __init__.py  test_cli.py  test_config.py  test_diff.py  test_e2e.py  test_edge_cases.py  test_integration.py  test_llm.py  test_reporter.py  test_rules.py
